--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -6,6 +6,7 @@ fastapi>=0.109.0
 uvicorn[standard]>=0.27.0
 pydantic>=2.5.0
 python-multipart>=0.0.6
+aiohttp>=3.9.0
 
 # Telegram bot dependencies
 python-telegram-bot>=21.0,<22.0
